protocolmodel/mcrl2/testing/errors/error_3003.mcf
% E3003 - No mutually supported OOB direction
[true* . LOG_ERROR(E3003)] false